--- a/frontend/src/pages/Auth/Auth.css
+++ b/frontend/src/pages/Auth/Auth.css
@@ -14,14 +14,12 @@
     background-image: url("assets/images/fon.jpg");
     background-size: cover;
     opacity: 0.3;
-    position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: aqua;
 }
-
 
 .auth-window {
     min-height: 20em;
@@ -36,7 +34,6 @@
     backdrop-filter: blur(2px);
     
 }
-
 
 .tabs-container {
     display: flex;
@@ -54,9 +51,7 @@
     cursor: pointer;
     position: relative;
 }
-  
- 
-  
+
 .tab-button.activee::after {
     content: '';
     position: absolute;
@@ -70,17 +65,13 @@
 
 .tab-button.activee {
     color: var(--text);
-    
 }
 
-
 .auth-title {
-    
     position: absolute;
     top: -2em;
     left: 50%;
     transform: translate(-50%, 0);
     font-size: 2em;
     color: white;
-     
 }
