--- a/frontend/src/pages/Home/components/MainChat/MainChat.css
+++ b/frontend/src/pages/Home/components/MainChat/MainChat.css
@@ -31,9 +31,8 @@
     background-image: url("assets/images/fon.jpg");
     background-size: cover;
     opacity: 0.3;
-    position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
@@ -50,7 +49,7 @@
     margin-bottom: auto;
     background-color: transparent;
     backdrop-filter: blur(2px);
-    box-shadow: 0px 0px 5px rgb(6, 6, 6);
+    box-shadow: 0 0 5px rgb(6, 6, 6);
     justify-content: center;
     color: var(--text);
 }
@@ -76,7 +75,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 0px 4px rgb(200, 200, 200);
+    box-shadow: 0 0 4px rgb(200, 200, 200);
     border-radius: 12px;
 }
 
@@ -92,7 +91,7 @@
     background-color: var(--color2);
     box-sizing: border-box;
     justify-self: flex-end;
-    box-shadow: 0px 0px 5px rgb(6, 6, 6);
+    box-shadow: 0 0 5px rgb(6, 6, 6);
     transition: all 0.1s ease-out;
 }
 
