--- a/frontend/src/pages/Home/components/Message/Message.css
+++ b/frontend/src/pages/Home/components/Message/Message.css
@@ -13,8 +13,8 @@
     width: max-content;
     max-width: 70%;
     padding-bottom: 0.3em;
-    border-radius: 12px 12px 12px 0px;
-    box-shadow: 0px 0px 5px rgb(6, 6, 6);
+    border-radius: 12px 12px 12px 0;
+    box-shadow: 0 0 5px rgb(6, 6, 6);
     box-sizing: border-box;
     position: relative;
     
@@ -81,7 +81,7 @@
     border: 1px solid #000;
     position: absolute;
     left: -5px;
-    bottom: 0px;
+    bottom: 0;
     translate: -100% ;
 }
 
@@ -96,7 +96,6 @@
 }
 
 .system{
-    background-color: var(--text);
     color: var(--text);
     display: flex;
     width: max-content;
@@ -113,7 +112,7 @@
 }
 
 .my-message {
-    border-radius: 12px 12px 0em 12px;
+    border-radius: 12px 12px 0 12px;
 }
 
 .my-message-body {
