--- a/frontend/src/pages/Home/components/ChatButton/ChatButton.css
+++ b/frontend/src/pages/Home/components/ChatButton/ChatButton.css
@@ -55,8 +55,7 @@
     align-self: center;
     justify-self: flex-end;
     display: flex;
-    margin-left: auto;
-    margin-right: 1em;
+    padding-right: 1em;
     align-items: center;
     flex-shrink: 0;
     
