--- a/frontend/src/pages/Home/components/ChatButton/ChatButton.css
+++ b/frontend/src/pages/Home/components/ChatButton/ChatButton.css
@@ -42,10 +42,10 @@
     user-select: none;
     overflow: hidden;
     text-overflow: ellipsis;
+    flex: 1 1 auto;
     white-space: nowrap;
     word-break: break-all;
     overflow-wrap: break-word;
-    max-width: 90%;
     height: 2em;
     padding-top: 0.3em;
 }
@@ -58,6 +58,7 @@
     margin-left: auto;
     margin-right: 1em;
     align-items: center;
+    flex-shrink: 0;
     
 }
 
