--- a/frontend/src/pages/Home/components/ChatButton/ChatButton.css
+++ b/frontend/src/pages/Home/components/ChatButton/ChatButton.css
@@ -30,13 +30,11 @@
 
 .chat-filling {
     display: flex;
-    width: 100%
+    width: 100%;
+    flex-direction: column;
+    gap: 1rem;
 }
 
-.title {
-    display: flex;
-    align-items: center;
-}
 
 .last-message {
     user-select: none;
