--- a/frontend/src/pages/Home/components/ChatButton/ChatButton.css
+++ b/frontend/src/pages/Home/components/ChatButton/ChatButton.css
@@ -19,7 +19,7 @@
     opacity: 0.8;
     background-color: var(--chat-button-hover);
 }
- 
+
 .chat-avatar {
     height: 80%;
     aspect-ratio: 1/1;
@@ -28,42 +28,46 @@
     object-fit: cover;
 }
 
-.chat-filling {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-
-.last-message {
-    user-select: none;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    flex: 1 1 auto;
-    word-break: normal;
-    overflow-wrap: normal;
-    white-space: nowrap;
-    height: 2em;
-    padding-top: 0.3em;
-    min-width: 0;
-}
-
-.last-message-time {
-    user-select: none;
-    align-self: center;
-    justify-self: flex-end;
-    display: flex;
-    padding-right: 1em;
-    align-items: center;
-    flex-shrink: 0;
-}
 
 .chat-name {
     user-select: none;
     font-weight: 700;
 }
 
+.chat-filling {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  overflow: hidden;
+}
+
+.chat-preview-row {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+  min-width: 0;
+}
+
+.last-message {
+  user-select: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  flex: 1 1 auto;
+  min-width: 0;
+  padding-top: 0.3em;
+}
+
+.last-message-time {
+  user-select: none;
+  padding-left: 0.5em;
+  flex-shrink: 0;
+  white-space: nowrap;
+  align-self: center;
+  display: flex;
+  align-items: center;
+}
 
 .unread {
     display: flex;
