--- a/frontend/src/pages/Home/components/MainChat/MainChat.css
+++ b/frontend/src/pages/Home/components/MainChat/MainChat.css
@@ -28,7 +28,7 @@
 .main-chat::before {
     content: "";
     position: absolute;
-    background-image: url("assets/images/fon.jpg");
+    background-image: url("@assets/images/fon.jpg");
     background-size: cover;
     opacity: 0.3;
     top: 0;
