--- a/frontend/src/pages/Home/components/SearchChatPanel/SearchChatPanel.css
+++ b/frontend/src/pages/Home/components/SearchChatPanel/SearchChatPanel.css
@@ -115,6 +115,7 @@
     width: 97%;
     text-align: center;
     padding: 0.5em;
+    max-height: 2em;
 }
 
 .search-button {
@@ -144,4 +145,5 @@
     margin-block: 0.1em;
     justify-content: center;
     background-color:  rgb(103, 139, 153);
+
 }
