--- a/frontend/src/pages/Home/components/Message/Message.css
+++ b/frontend/src/pages/Home/components/Message/Message.css
@@ -48,7 +48,7 @@
     font-size: 1em;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 50%;
+    max-width: 7em;
 }
 
 .prev {
