--- a/frontend/src/pages/Home/components/ChatButton/ChatButton.css
+++ b/frontend/src/pages/Home/components/ChatButton/ChatButton.css
@@ -39,7 +39,7 @@
 }
 
 
-.last-message-wrapper.scroll-on-hover:hover {
+.last-message.scroll-on-hover:hover {
   animation: scroll-text 10s linear infinite;
 }
 
