--- a/frontend/src/pages/Home/components/Message/Message.css
+++ b/frontend/src/pages/Home/components/Message/Message.css
@@ -34,6 +34,15 @@
     overflow: hidden;
 }
 
+
+.message-title {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 0.5em;
+  overflow: hidden;
+}
+
 .sent-time {
     display: flex;
     font-size: 1em;
@@ -43,6 +52,7 @@
     margin-right: 0.3em;
     background-color: var(--color2);
 }
+
 
 .username {
     background-color: var(--color2);
@@ -58,6 +68,22 @@
     flex: 1 1 auto;
 }
 
+
+.username {
+    background-color: var(--color2);
+    font-size: 1em;
+    padding-inline: 0.5em;
+    border-radius: 1em;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+    min-width: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+}
 .prev {
     border-radius: 12px;
 }
