--- a/frontend/src/assets/css/base.css
+++ b/frontend/src/assets/css/base.css
@@ -1,34 +1,29 @@
-@import '@assets/fonts/FedraSansPro/font-face.css';
-
+@import "@assets/fonts/FedraSansPro/font-face.css";
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
 body {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background-color: #0e1621;  
-    text-rendering: optimizeSpeed;
-
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: #0e1621;
+  text-rendering: optimizeSpeed;
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative;
-    overflow-y:hidden;
-    overflow-x: hidden;
-    box-sizing: border-box; 
-    
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
-
 .btn {
-    cursor: pointer;
+  cursor: pointer;
 }
