--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,14 +1,12 @@
 .App {
-    display: flex;
-    width: 100vw;
-    position: relative;
-    color: var(--text);
-    transition: color 1s
-    
+  display: flex;
+  width: 100vw;
+  position: relative;
+  color: var(--text);
+  transition: color 1s;
 }
 
-
 .notifications {
-    position: absolute;
-    z-index: 3;
+  position: absolute;
+  z-index: 3;
 }
